<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NewApplicationActivity">

    <EditText
        android:id="@+id/edit_text_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_job_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_name"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Description"
        android:inputType="textMultiLine" />


</LinearLayout>