<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintCircleRadius="50dp"
    android:background="@color/colorPrimaryLight"
    android:padding="16dp">

    <EditText
        android:id="@+id/companyNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/company_name"
        android:backgroundTint="@color/colorSecondaryDark"
        android:textColorHint="@color/colorWhiteHint"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/jobNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/job_name"
        android:backgroundTint="@color/colorSecondaryDark"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhiteHint"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyNameEditText" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:textAppearanceMedium"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_button_input_field"
        android:text="@string/ok"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobNameEditText" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        style="?android:textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:textAllCaps="false"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:background="@drawable/login_button_input_field"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubmit"
        app:layout_constraintTop_toBottomOf="@+id/jobNameEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>